# openmelt

./: .gitignore  Cargo.toml  README  README.md
examples/: ingest.rs
src/: app.rs  arrow.rs  bulk.rs  compact.rs  compute.rs  config.rs  consts.rs  exec.rs  id_gen.rs  ingest.rs  json_utils.rs  json_utls.rs  lib.rs  main.rs  meta.rs  parquet_utils.rs  parser.rs  router.rs  schema.rs  server.rs  storage.rs  tests_utils.rs  utils.rs  writer.rs
src/fusion/: array.rs  arrow.rs  compute.rs  merge.rs  mod.rs  parquet.rs  recordbatch.rs  schema.rs
src/query/: mod.rs  parser.rs
src/utils/: json.rs  time.rs
