[package]
name = "melt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
ahash = "0.8.6"
anyhow = "1.0.75"
arrow-buffer = "49.0.0"
arrow-ipc = "49.0.0"
arrow-json = "49.0.0"
arrow-schema = { version = "49.0.0", features = ["serde"] }
bytes = "1.5.0"
chrono = "0.4.31"
datafusion = "34.0.0"
env_logger = "0.10.1"
log = "0.4.20"
once_cell = "1.19.0"
parquet = "49.0.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tempfile = "3.8.1"
tokio = { version = "1.35.0", features = ["full"] }
utoipa = "4.1.0"
#uuid = "1.6.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
